update domain lib

--- a/apps/bud/project.json
+++ b/apps/bud/project.json
@@ -8,16 +8,29 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/bud",
         "index": "apps/bud/src/index.html",
         "browser": "apps/bud/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/bud/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/bud/src/favicon.ico", "apps/bud/src/assets"],
-        "styles": ["apps/bud/src/styles.scss"],
+        "assets": [
+          "apps/bud/src/favicon.ico",
+          {
+            "glob": "**/*",
+            "input": "assets",
+            "output": "./assets/"
+          }
+        ],
+        "styles": [
+          "apps/bud/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -67,7 +80,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/bud/jest.config.ts"
       }
