--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@angular/platform-browser": "~17.3.0",
     "@angular/platform-browser-dynamic": "~17.3.0",
     "@angular/router": "~17.3.0",
+    "@ngrx/effects": "~17.0.0",
+    "@ngrx/router-store": "~17.0.0",
+    "@ngrx/store": "~17.0.0",
     "@nx/angular": "18.3.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,7 +31,9 @@
     "@angular/cli": "~17.3.0",
     "@angular/compiler-cli": "~17.3.0",
     "@angular/language-service": "~17.3.0",
-    "@nx/cypress": "18.3.5",
+    "@ngrx/schematics": "~17.0.0",
+    "@ngrx/store-devtools": "~17.0.0",
+    "@nx/cypress": "^18.3.5",
     "@nx/eslint": "18.3.5",
     "@nx/eslint-plugin": "18.3.5",
     "@nx/jest": "18.3.5",
@@ -37,18 +42,22 @@
     "@nx/workspace": "18.3.5",
     "@schematics/angular": "~17.3.0",
     "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
+    "@swc/core": "^1.7.39",
     "@swc/helpers": "~0.5.2",
+    "@swc/types": "^0.1.13",
+    "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
-    "cypress": "^13.6.6",
+    "cypress": "^13.15.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-marbles": "^3.1.0",
     "jest-preset-angular": "~14.0.3",
     "nx": "18.3.5",
     "prettier": "^2.6.2",
